--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <div id="root">
-      <script type="module" src="/src/main.jsx"></script>
+      <script type="module" src="/src/components/pages/main.jsx"></script>
     </div>
   </body>
 </html>
